--- a/web/modules/buddy/buddy.routing.yml
+++ b/web/modules/buddy/buddy.routing.yml
@@ -399,6 +399,20 @@ buddy.description_view:
     parameters:
       description:
         type: entity:node
+buddy.at_moderator_description_view:
+  path: '/at-moderator/at-entries/view-description/{description}'
+  defaults:
+    _controller: '\Drupal\buddy\Controller\ATDescriptionViewController::ATDescriptionView'
+    _title: 'View Description'
+  requirements:
+    _permission: 'access content'
+    _role: 'administrator+at_moderator'
+    _entity_bundles: 'description:at_description'
+  options:
+    no_cache: 'TRUE'
+    parameters:
+      description:
+        type: entity:node
 buddy.update_rating:
   path: '/update-rating/{user}/{atEntry}/{rating}'
   defaults:
