--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "drupal/features": "^3.12",
         "drupal/fivestar": "^1.0@alpha",
         "drupal/fontawesome_menu_icons": "^1.9",
+        "drupal/mail_login": "^2.6",
         "drupal/mailsystem": "^4.3",
         "drupal/phpmailer_smtp": "^2.0",
         "drupal/redirect_after_login": "^2.7",
