--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "composer/installers": "^1.9",
         "drupal/bootstrap4": "^2.1",
         "drupal/config_direct_save": "^2.1",
+        "drupal/context_active_trail": "^2.0@RC",
         "drupal/core-composer-scaffold": "^9.1",
         "drupal/core-project-message": "^9.1",
         "drupal/core-recommended": "^9.1",
