--- a/web/modules/buddy/buddy.routing.yml
+++ b/web/modules/buddy/buddy.routing.yml
@@ -91,7 +91,16 @@ buddy.user_account_form:
   path: '/user-account'
   defaults:
     _form: '\Drupal\buddy\Form\UserAccountForm'
-    _title: 'Welcome'
+    _title: 'Change Settings'
+  requirements:
+    _user_is_logged_in: 'TRUE'
+  options:
+    no_cache: 'TRUE'
+buddy.user_account_delete_form:
+  path: '/user-account-delete'
+  defaults:
+    _form: '\Drupal\buddy\Form\UserAccountDeleteForm'
+    _title: 'Delete Account'
   requirements:
     _user_is_logged_in: 'TRUE'
   options:
