--- a/web/modules/buddy/buddy.routing.yml
+++ b/web/modules/buddy/buddy.routing.yml
@@ -28,7 +28,7 @@ buddy.user_register:
   path: '/user-register'
   defaults:
     _form: '\Drupal\buddy\Form\UserRegisterForm'
-    _title: 'Welcome'
+    _title: 'Create account'
   requirements:
     _role: 'anonymous'
   options:
@@ -55,7 +55,7 @@ buddy.user_login:
   path: '/user-login'
   defaults:
     _form: '\Drupal\buddy\Form\UserLoginForm'
-    _title: 'Welcome'
+    _title: 'Log in'
   requirements:
     _role: 'anonymous'
   options:
