^small changes to routes

--- a/web/modules/buddy/buddy.routing.yml
+++ b/web/modules/buddy/buddy.routing.yml
@@ -91,7 +91,7 @@ buddy.user_account_form:
   path: '/user-account'
   defaults:
     _form: '\Drupal\buddy\Form\UserAccountForm'
-    _title: 'Change Settings'
+    _title: 'Account Information'
   requirements:
     _user_is_logged_in: 'TRUE'
   options:
