--- a/web/modules/buddy/buddy.routing.yml
+++ b/web/modules/buddy/buddy.routing.yml
@@ -135,7 +135,7 @@ buddy.user_at_recommendation:
   path: '/user-at-recommendation'
   defaults:
     _form: '\Drupal\buddy\Form\ATRecommendationForm'
-    _title: 'My Tool Recommendations'
+    _title: 'Tools'
   requirements:
     _user_is_logged_in: 'TRUE'
 buddy.user_at_library:
